2006-03-18  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Checksum/MD5.pm, Checksum/SHA1.pm: use Digest::<foo> if available,
	otherwise fall back to command-line stuff.  Also added support for
	openssl sha1 in the SHA1.pm plugin.

2006-03-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: handle when there are extra ='s in the environment vars

2006-03-17  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, PkgVersion.pm, Config.pm, Engine.pm, Services.pm,
	SysState.pm: POD cleanup
	* Scanpackages.pm: New module to do what apt-ftparchive does.
	* Engine.pm: Use Scanpackages.pm instead of dpkg-scanpackages or
	apt-ftparchive. AutoScanpackages now defaults to ON! Also, scanpackages
	now automatically calls apt-get update.
	* Bootstrap.pm: Accommodate fink-scanpackages script.
	* Bootstrap.pm: Don't include 'CVS' or '.svn' directories in tarballs
	when injecting.

2006-03-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Move BDO violation checking into its own method,
	and remember to call it for splitoffs not just parents.

2006-03-16  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Import some Services:: funtions that we use here

2006-03-15  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Ok, now let's try in a non-stupid way.

2006-03-15  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm, Engine.pm: Attempt to fix some of dep engine
	weirdness. Now no more storing versionspecs inside Package objects, instead
	we store a list of ok versions in the deps table.

2006-03-14  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Do not issue repeated warnings about the same
	BuildDependsOnly violation

2006-03-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix *SetPATH handler

2006-03-01  Daniel Macks  <dmacks@netspace.org>

	* Status.pm: Don't whine if status db not yet loaded.

2006-03-01  Daniel Macks  <dmacks@netspace.org>
