@@ -1,3 +1,7 @@
+2006-03-18  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* Scanpackages.pm: Don't go nuts when there's an invalid scanpackages.db
+
 2006-03-18  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* Checksum/MD5.pm, Checksum/SHA1.pm: use Digest::<foo> if available,
